Part 1: Adding OTA updater. Not finished yet. Needs much more work

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -27,6 +27,8 @@
     <string name="information">Information</string>
     <string name="position_top">Top</string>
     <string name="position_bottom">Bottom</string>
-    <string name="misc_cat">Misc</string> 
+    <string name="misc_cat">Misc</string>
+    <string name="cancel">Cancel</string>  
+    <string name="ok">OK</string>  
 
 </resources>
